kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-app
spec:
  type: NodePort
  selector:
    app: cicd-app
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
